--- a/day2/index.html
+++ b/day2/index.html
@@ -1,20 +1,21 @@
-  
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS + CSS Clock</title>
 </head>
+
 <body>
 
 
-    <div class="clock">
-      <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
-      </div>
+  <div class="clock">
+    <div class="clock-face">
+      <div class="hand hour-hand transition"></div>
+      <div class="hand min-hand transition"></div>
+      <div class="hand second-hand transition"></div>
     </div>
+  </div>
 
 
   <style>
@@ -44,17 +45,18 @@
       position: relative;
       padding: 2rem;
       box-shadow:
-        0 0 0 4px rgba(0,0,0,0.1),
+        0 0 0 4px rgba(0, 0, 0, 0.1),
         inset 0 0 0 3px #EFEFEF,
         inset 0 0 10px black,
-        0 0 10px rgba(0,0,0,0.2);
+        0 0 10px rgba(0, 0, 0, 0.2);
     }
 
     .clock-face {
       position: relative;
       width: 100%;
       height: 100%;
-      transform: translateY(-3px); /* account for the height of the clock hands */
+      transform: translateY(-3px);
+      /* account for the height of the clock hands */
     }
 
     .hand {
@@ -65,44 +67,75 @@
       top: 50%;
       transform-origin: 100%;
       transform: rotate(90deg);
-      transition: all 0.05s;
-      transition-timing-function:cubic-bezier(0.1, 2.7, .58, 1);
-
+      transition-timing-function: ease-in-out;
     }
 
-    .min-hand{
-        background: grey;
-    }
-    .hour-hand{
-        background: lightgray;
+    .transition {
+      transition: all 0.5s;
     }
 
+    .second-hand {
+      background-color: red;
+      height: 4px;
+    }
+
+    .min-hand {
+      background-color: rgb(60, 60, 60);
+    }
   </style>
 
-  <script> 
-    const secondHand = document.querySelector('.second-hand');
-    const minHand = document.querySelector('.min-hand');
-    const hourHand = document.querySelector('.hour-hand');
+  <script>
+
+    const hands = document.querySelectorAll(".hand");
+    const secondHand = document.querySelector(".second-hand");
+    const minuteHand = document.querySelector(".min-hand");
+    const hourHand = document.querySelector(".hour-hand");
+
     function setDate() {
-        const now = new Date();
-        const seconds = now.getSeconds();
-        const secondsDegrees = ((seconds / 60) * 360) + 90;
-        
-        const mins = now.getMinutes();
-        const minsDegrees = ((mins / 60) * 360) + 90;
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const minutes = now.getMinutes();
+      const hours = now.getHours();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      const minutesDegrees = ((minutes / 60) * 360) + 90;
+      const hoursDegrees = ((hours / 12) * 360) + 90;
+      secondHand.style.transform = (`rotate(${secondsDegrees}deg)`);
+      minuteHand.style.transform = (`rotate(${minutesDegrees}deg)`);
+      hourHand.style.transform = (`rotate(${hoursDegrees}deg)`);
 
-        const hours = now.getHours();
-        const hoursDegrees = ((hours / 12) * 360) + 90;
+      /* if the seconds/minutes/hours Degrees >= 444
+    then turn off the transition
 
-        secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
-        minHand.style.transform = `rotate(${minsDegrees}deg)`;
-        hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+    if the seconds/minutes/hours Degrees >= 90
+    then turn on the transition*/
+      if (secondsDegrees >= 443) {
+        secondHand.classList.remove("transition");
       }
+      else if (secondsDegrees >= 91) {
+        secondHand.classList.add("transition");
+      }
+
+      if (minutesDegrees >= 443) {
+        minuteHand.classList.remove("transition");
+      }
+      else if (minutesDegrees >= 91) {
+        minuteHand.classList.add("transition");
+      }
+
+      if (hoursDegrees >= 443) {
+        hourHand.classList.remove("transition");
+      }
+      else if (hoursDegrees >= 91) {
+        hourHand.classList.add("transition");
+      }
+
+      console.log(minutesDegrees);
+    }
 
     setInterval(setDate, 1000);
 
-    
 
   </script>
 </body>
+
 </html>
