--- a/day3/index.html
+++ b/day3/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Scoped CSS Variables and JS</title>
 </head>
+
 <body>
   <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
 
@@ -15,27 +17,33 @@
     <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
     <label for="base">Base Color</label>
-    <input id="base" type="color" name="base" value="#4dcc72">
+    <input id="base" type="color" name="base" value="#37be59">
   </div>
 
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
-      :root{
-          --base: #4dcc72;
-          --spacing: 10px;
-          --blur: 10px;
-      }
+    * {
+      box-sizing: border-box;
+    }
 
-      img{
-          padding: var(--spacing);
-          background: var(--base);
-          filter: blur(var(--blur));
-      }
+    :root {
+      --base: #37be59;
+      --spacing: 10px;
+      --blur: 10px;
+    }
 
-      .hl{
-          color: var(--base);
-      }
+    img {
+      height: 10em;
+      aspect-ratio: 16/9;
+      padding: var(--spacing);
+      background-color: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    .hl {
+      color: var(--base);
+    }
 
     /*
       misc styles, nothing to do with CSS variables
@@ -60,18 +68,19 @@
   </style>
 
   <script>
-       const inputs = document.querySelectorAll('.controls input');
 
-       function handleUpdate(){
-           const suffix = this.dataset.sizing || '';
-           document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
-           console.log(this.name);
-       }
+    const inputs = document.querySelectorAll(".controls input");
 
-       inputs.forEach(input => input.addEventListener('change', handleUpdate));
-       inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
+    function handleUpdate() {
+      const suffix = this.dataset.sizing || "";
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+    }
+
+    inputs.forEach(input => input.addEventListener("change", handleUpdate));
+    inputs.forEach(input => input.addEventListener("mousemove", handleUpdate));
 
   </script>
 
 </body>
+
 </html>
