--- a/day8/index.html
+++ b/day8/index.html
@@ -8,17 +8,9 @@
 
 <body>
     <h1>Draw Below</h1>
-    <div class="container"><canvas id="draw" width="100" height="100"></canvas></div>
-
-    <script>
-    </script>
+    <div class="container"><canvas id="draw"></canvas></div>
 
     <style>
-        :root {
-            --height: 70vh;
-            --width: 70vw;
-        }
-
         * {
             box-sizing: border-box;
         }
@@ -50,6 +42,7 @@
         #draw {
             height: 100%;
             width: 100%;
+            border: 1px solid red;
         }
 
         .container {
@@ -62,6 +55,44 @@
         }
     </style>
 
+    <script>
+        const canvas = document.querySelector("#draw");
+        const ctx = canvas.getContext("2d");
+        const container = document.querySelector(".container");
+
+        canvas.width = container.clientWidth;
+        canvas.height = container.clientHeight;
+        console.log(container.clientHeight);
+        ctx.strokeStyle = "#bada55";
+        ctx.lineJoin = "round";
+        ctx.lineCap = "round";
+        ctx.lineWidth = 10;
+
+        let isDrawing = false;
+        let lastX = 0;
+        let lastY = 0;
+        let hue = 0;
+
+        function draw(e) {
+            if (!isDrawing) return;  //stop the function from running when they are not moused down
+            console.log(e);
+            ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
+            ctx.beginPath();
+            ctx.moveTo(lastX, lastY);
+            ctx.lineTo(e.offsetX, e.offsetY);
+            ctx.stroke();
+            [lastX, lastY] = [e.offsetX, e.offsetY];
+            hue += 5;
+        }
+
+        canvas.addEventListener('mousedown', (e) => {
+            isDrawing = true;
+            [lastX, lastY] = [e.offsetX, e.offsetY];
+        });
+        canvas.addEventListener('mousemove', draw);
+        canvas.addEventListener('mouseup', () => isDrawing = false);
+        canvas.addEventListener('mouseout', () => isDrawing = false);
+    </script>
 </body>
 
 </html>
