--- a/day8/index.html
+++ b/day8/index.html
@@ -71,6 +71,7 @@
         let lastX = 0;
         let lastY = 0;
         let hue = 0;
+        let direction = true;
 
         function draw(e) {
             if (!isDrawing) return;  //stop the function from running when they are not moused down
@@ -85,6 +86,16 @@
             if (hue >= 360) {
                 hue = 0;
             };
+
+            if (ctx.lineWidth >= 100 || ctx.lineWidth <= 1) {
+                direction = !direction;
+            }
+            if (direction) {
+                ctx.lineWidth++;
+            } else {
+                ctx.lineWidth--;
+            };
+            /*ctx.lineWidth++;*/
         }
 
         canvas.addEventListener('mousedown', (e) => {
