--- a/day8/index.html
+++ b/day8/index.html
@@ -8,6 +8,10 @@
 
 <body>
     <h1>Draw Below</h1>
+    <label for="size">Size: <span id="pxSize">10px</span></label>
+    <input id="size" type="range" name="size" min="1" max="200" value="10" data-sizing="px">
+    <label for="color">Color</label>
+    <input id="color" type="color" name="color" value="#37be59">
     <div class="container"><canvas id="draw"></canvas></div>
 
     <style>
@@ -61,7 +65,6 @@
 
         canvas.width = container.clientWidth;
         canvas.height = container.clientHeight;
-        console.log(container.clientHeight);
         ctx.strokeStyle = "#bada55";
         ctx.lineJoin = "round";
         ctx.lineCap = "round";
@@ -76,13 +79,13 @@
         function draw(e) {
             if (!isDrawing) return;  //stop the function from running when they are not moused down
             console.log(e);
-            ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
+            /*ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;*/
             ctx.beginPath();
             ctx.moveTo(lastX, lastY);
             ctx.lineTo(e.offsetX, e.offsetY);
             ctx.stroke();
             [lastX, lastY] = [e.offsetX, e.offsetY];
-            hue += 5;
+            /*hue += 5;
             if (hue >= 360) {
                 hue = 0;
             };
@@ -105,6 +108,30 @@
         canvas.addEventListener('mousemove', draw);
         canvas.addEventListener('mouseup', () => isDrawing = false);
         canvas.addEventListener('mouseout', () => isDrawing = false);
+
+        /*    <input id="size" type="range" name="size" min="1" max="200" value="5" data-sizing="px">
+                <label for="color">Color</label>
+                <input id="color" type="color" name="color" value="#37be59">*/
+        const size = document.querySelector("#size");
+        const sizeDisplay = document.querySelector("#pxSize");
+        const color = document.querySelector("#color");
+
+        /*size.addEventListener("mousedown", change);*/
+        size.addEventListener("mousemove", change);
+
+        function change() {
+            ctx.lineWidth = size.value;
+            sizeDisplay.textContent = `${ctx.lineWidth}` + "px";
+        }
+
+        /*color.addEventListener("mousemove", colorChange);*/
+        color.addEventListener("mouseup", colorChange);
+
+        function colorChange() {
+            ctx.strokeStyle = `${color.value}`;
+            console.log(color.value);
+        }
+
     </script>
 </body>
 
