--- a/day12/index.html
+++ b/day12/index.html
@@ -9,6 +9,11 @@
 
 <body>
     <script>
+
+        window.addEventListener('keyup', (e) => {
+            console.log(e);
+        })
+
     </script>
 </body>
 
