--- a/day12/index.html
+++ b/day12/index.html
@@ -10,8 +10,17 @@
 <body>
     <script>
 
+        const pressed = [];
+        const secretCode = "wesbos";
+
         window.addEventListener('keyup', (e) => {
             console.log(e);
+            pressed.push(e.key);
+            pressed.splice(-secretCode.length - 1, pressed.length - secretCode.length)
+            if (pressed.join("").includes(secretCode)) {
+                console.log("Ding! Ding! Ding!")
+            }
+            console.log(pressed);
         })
 
     </script>
