--- a/day12/index.html
+++ b/day12/index.html
@@ -18,8 +18,9 @@
             pressed.push(e.key);
             pressed.splice(-secretCode.length - 1, pressed.length - secretCode.length)
             if (pressed.join("").includes(secretCode)) {
-                console.log("Ding! Ding! Ding!")
-            }
+                console.log("Ding! Ding! Ding!");
+                cornify_add();
+            };
             console.log(pressed);
         })
 
