changed secret code

--- a/day12/index.html
+++ b/day12/index.html
@@ -11,7 +11,7 @@
     <script>
 
         const pressed = [];
-        const secretCode = "wesbos";
+        const secretCode = "joshua";
 
         window.addEventListener('keyup', (e) => {
             console.log(e);
