--- a/day13/index.html
+++ b/day13/index.html
@@ -165,6 +165,26 @@
             };
         }
 
+        const sliderImages = document.querySelectorAll(".slide-in");
+
+        function checkSlide(e) {
+            sliderImages.forEach(sliderImage => {
+                //  halfway through the image
+                const slideInAt = (window.scrollY + window.innerHeight) - sliderImage.height / 2;
+                // bottom of the image
+                const imageBottom = sliderImage.offsetTop + sliderImage.height;
+                const isHalfShown = slideInAt > sliderImage.offsetTop;
+                const isNotScrolledPast = window.scrollY < imageBottom;
+                if (isHalfShown && isNotScrolledPast) {
+                    sliderImage.classList.add("active");
+                } else { // the rest of this else statement is if I want the images to remove the actie class if not on screen
+                    sliderImage.classList.remove("active");
+                }
+            });
+        };
+
+        window.addEventListener("scroll", debounce(checkSlide));
+
     </script>
 
     <style>
