--- a/day16/index.html
+++ b/day16/index.html
@@ -54,7 +54,7 @@
             const xWalk = Math.round((x / width * walk) - (walk / 2));
             const yWalk = Math.round((y / height * walk) - (walk / 2));
 
-            text.style.textShadow = `${xWalk}px ${yWalk}px 0px green`;
+            text.style.textShadow = `${xWalk}px ${yWalk}px 0px hsl(${xWalk * 3}, 100%, 50%)`;
         };
 
         hero.addEventListener("mousemove", shadow);
